# amra

./: .gitignore  CMakeLists.txt  build.sh
include/amra/: grid2d.hpp  interface.h
python/: CMakeLists.txt  plan_2d.cpp  test.py
src/amra/: grid2d.cpp  interface.cpp
test/: run2d.cpp
